link do githuba

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header>
         <h1>Nazywam się <b>Łukasz Fryc</b></h1>
         <h2>Jestem studentem</h2>
-        <h3><i>Nic więcej nie będę tu pisać</i></h3>
+        <h3><i><a href="https://github.com/w67230/Html">Github</a></i></h3>
         <h4>A jednak dam tu linki do podstron</h4>
         <h5><a href="podstrona1.html">Pierwsza podstrona</a></h5>
         <h6><a href="podstrona2.html">Druga podstrona</a></h6>
