--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -30,6 +30,10 @@
 
     <button id="max" name="max">Max</button>
     <p id="wynikMax"></p>
+
+    <br><br><br><br>
+
+    <button id="nwd" name="nwd">NWD</button>
 <script src="skrypt.js"></script>
 </body>
 </html>
