--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -34,6 +34,16 @@
     <br><br><br><br>
 
     <button id="nwd" name="nwd">NWD</button>
+
+    <br><br><br><br>
+
+    <button id="obiekt" name="obiekt">Podaj studenta</button><br>
+    <p id="wynikObiekt"></p>
+
+    <br><br><br><br>
+
+    <p id="zegarek"></p>
+
 <script src="skrypt.js"></script>
 </body>
 </html>
