--- a/Lab07/index.html
+++ b/Lab07/index.html
@@ -7,12 +7,16 @@
     <title>Document</title>
     <style>
         form{
-            width:50%;
+            width:65%;
             height:50vh;
             border:solid;
         }
         th{
             text-align: left;
+        }
+        p{
+            margin:0;
+            padding:0;
         }
     </style>
 </head>
@@ -21,38 +25,54 @@
         <table>
             <tr>
                 <th><label for="imie">Imię</label></th>
+                <!--<td><input type="text" name="imie" id="imie" required></td> -->
+                                                <!-- ^^ domyslna walidacja formularza (required) ^^ -->
                 <td><input type="text" name="imie" id="imie"></td>
+                <td><p id="valimie"></p></td>
             </tr>
             <tr>
+                
                 <th><label for="nazwisko">Nazwisko</label></th>
                 <td><input type="text" name="nazwisko" id="nazwisko"></td>
+                <td><p id="valnazwisko"></p></td>
             </tr>
             <tr>
                 <th><label for="mail">E-mail</label></th>
                 <td><input type="email" name="mail" id="mail"></td>
+                <td><p id="valmail"></p></td>
             </tr>
             <tr>
                 <th><label for="haslo">Hasło</label></th>
                 <td><input type="password" name="haslo" id="haslo"></td>
-                <td><p id="trudnoscHasla"></p></td>
+                <td><p id="valhaslo"></p></td>
             </tr>
             <tr>
-                <th><label for="pM" id="labM">Mężczyzna</label></th>
-                <td><input type="radio" name="plec" value="m" id="pM"></td>
-                <th><label for="pK" id="labK">Kobieta</label></th>
-                <td><input type="radio" name="plec" value="k" id="pK"></td>
+                <th><label for="powthaslo">Powtórz hasło</label></th>
+                <td><input type="password" name="powthaslo" id="powthaslo"></td>
+                <td><p id="valpowthaslo"></p></td>
+            </tr>
+            <tr>
+                <th><p id="message">Płeć:</p></th>
+            </tr>
+            <tr>
+                <td><label for="pM" id="labM">Mężczyzna</label><input type="radio" name="plec" value="m" id="pM"></td>
+                <td><label for="pK" id="labK">Kobieta</label><input type="radio" name="plec" value="k" id="pK"></td>
+                <td><p id="valplec"></p></td>
             </tr>
             <tr>
                 <th><label for="tel">Nr telefonu</label></th>
-                <td><input type="tel" name="telefon" id="tel"></td>
+                <td><input type="tel" name="tel" id="tel"></td>
+                <td><p id="valtel"></p></td>
             </tr>
             <tr>
                 <th><label for="data">Data urodzenia</label></th>
                 <td><input type="date" name="data" id="data"></td>
+                <td><p id="valdata"></p></td>
             </tr>
             <tr>
                 <th><label for="kraj">Kraj</label></th>
                 <td><input type="text" name="kraj" id="kraj"></td>
+                <td><p id="valkraj"></p></td>
             </tr>
             <tr>
                 <td><input type="submit" name="zapisz" id="wyslij"></td>
@@ -66,29 +86,75 @@
 
         function validateForm(){
             let dane = d.forms["dane"];
+            let poprawne = true;
             for(let i = 0; i < dane.length - 1; i++){
                 dane[i].style = "";
                 if(sprawdzCzyPuste(dane[i].value)){
                     dane[i].style = "background-color:red;";
-                    return false;
+                    d.querySelector("#val"+dane[i].id).innerHTML = "To pole nie może być puste!";
+                    poprawne = false;
+                    continue;
                 }
+                else if(dane[i].type != "submit" && dane[i].id != "powthaslo"){
+                    d.querySelector("#val"+dane[i].name).innerHTML = "";
+                }
+
+
                 if(dane[i].type == "text"){
                     if(sprawdzDlugoscZnakow(3, 14, dane[i].value)){
                         dane[i].style = "background-color:red;";
-                        return false;
+                        d.querySelector("#val"+dane[i].id).innerHTML = "Pole musi zawierać od 3 do 14 znaków!";
+                        poprawne = false;
                     }
                 }
                 else if(dane[i].type == "email"){
                     if(sprawdzMaila(dane[i].value)){
                         dane[i].style = "background-color:red;";
-                        return false;
+                        d.querySelector("#val"+dane[i].id).innerHTML = "Wpisz poprawny e-mail!";
+                        poprawne = false;
+                    }
+                }
+                else if(dane[i].type == "radio"){
+                    let zaznaczone = sprawdzRadio(dane[i]);
+                    i++;
+                    if(!zaznaczone) zaznaczone = sprawdzRadio(dane[i]);
+                    if(!zaznaczone){
+                        d.querySelector("#val"+dane[i].name).innerHTML = "Należy zaznaczyć jedną z opcji"
+                        poprawne = false;
+                    } 
+                }
+                else if(dane[i].type == "tel"){
+                    if(sprawdzTelefon(dane[i].value)){
+                        dane[i].style = "background-color:red;";
+                        d.querySelector("#val"+dane[i].id).innerHTML = "Pole musi zawierać 9 cyfr bez spacji!";
+                        poprawne = false;
+                    }
+                }
+                else if(dane[i].type == "password" && dane[i].id != "powthaslo"){
+                    if(sprawdzDlugoscZnakow(8, 24, dane[i].value)){
+                        dane[i].style = "background-color:red;";
+                        d.querySelector("#val"+dane[i].id).innerHTML = "Hasło musi zawierać od 8 do 24 znaków!";
+                        poprawne = false;
+                    }
+                    if(dane[i].value != d.querySelector("#powthaslo").value){
+                        d.querySelector("#valpowthaslo").innerHTML = "Hasła się od siebie różnią!";
+                        poprawne = false;
+                    } 
+                }
+                else if(dane[i].type == "date"){
+                    if(sprawdzPelnoletniosc(dane[i].value)){
+                        dane[i].style = "background-color:red;";
+                        d.querySelector("#val"+dane[i].id).innerHTML = "Musisz być pełnoletni!";
+                        poprawne = false;
                     }
                 }
 
 
             }
-            return true;
+            return poprawne;
         }
+
+
         
         function sprawdzCzyPuste(value){
             if(value == "") return true;
@@ -111,11 +177,63 @@
             return !maMalpe || !maKropke;
         }
 
-        function zwrocTrudnoscHasla(value){
-
-
-            d.querySelector("#trudnoscHasla").innerHTML = "";
+        function sprawdzRadio(input){
+            if(input.checked) return true;
+            return false;
         }
+
+        function sprawdzTelefon(value){
+            if(value.length != 9) return true;
+            let temp;
+            for(let i = 0; i < 9; i++){
+                temp = parseInt(value[i]);
+                if(temp >=0 && temp < 10) continue;
+                return true;
+            }
+            return false;
+        }
+
+        function sprawdzPelnoletniosc(value){
+            let data = new Date();
+            let podanyRok = parseInt(value[0] + value[1] + value[2] + value[3]);
+            if(data.getFullYear() - podanyRok < 18) return true;
+            return false;
+        }
+
+        function zwrocTrudnoscHasla(value){
+            let secik = new Set();
+            for(let i = 0; i < value.length; i++){
+                secik.add(value[i]);
+            }
+
+            if(secik.size > 15) return "Silne";
+            if(secik.size > 8) return "Może być";
+            return "Słabe";
+        }
+
+
+
+        function wypiszSileHasla(){
+            if(!sprawdzDlugoscZnakow(8, 24, d.querySelector("#haslo").value)){
+                d.querySelector("#valhaslo").innerHTML = zwrocTrudnoscHasla(d.querySelector("#haslo").value);
+            }
+            else{
+                d.querySelector("#valhaslo").innerHTML = "Hasło musi zawierać od 8 do 24 znaków";
+            }
+        }
+
+        function wypiszRownoscHasel(){
+            if(d.querySelector("#haslo").value != d.querySelector("#powthaslo").value){
+                d.querySelector("#valpowthaslo").innerHTML = "Hasła się od siebie różnią!";
+            }
+            else{
+                d.querySelector("#valpowthaslo").innerHTML = "Ok";
+            }
+        }
+
+
+        d.querySelector("#haslo").addEventListener("keydown", wypiszSileHasla);
+        d.querySelector("#powthaslo").addEventListener("keyup", wypiszRownoscHasel);
 
 
     </script>
